--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyter-desktop",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Alan Chen",
   "license": "MIT",
   "productName": "Jupyter Desktop",
@@ -11,15 +11,34 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "fix-path": "^3.0.0",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "electron": "8.2.0",
+    "electron": "10.1.5",
     "electron-builder": "^22.4.1",
     "electron-webpack": "^2.8.2",
     "webpack": "~4.42.1"
   },
   "build": {
-    "appId": "com.alanchen.jupyter-desktop"
+    "appId": "com.alanchen.jupyter-desktop",
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "extendInfo": {
+        "CFBundleDocumentTypes": [
+          {
+            "CFBundleTypeName": "Folders",
+            "CFBundleTypeRole": "Viewer",
+            "LSHandlerRank": "Alternate",
+            "LSItemContentTypes": [
+              "public.folder",
+              "com.apple.bundle",
+              "com.apple.package",
+              "com.apple.resolvable"
+            ]
+          }
+        ]
+      }
+    }
   }
 }
